clusters/k3s-home/apps/media/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-http-route
  namespace: media
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
  hostnames:
    - "radarr.fletcherlabs.net"
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
